--- a/index.html
+++ b/index.html
@@ -13,14 +13,29 @@
 
     <body>
         <div class="grid-container">    
+
             <div class="grid-item1"></div>
+
             <div class="grid-item2"></div>
+
             <div class="grid-logo"><img class="logo" src="images/logo.svg" alt="logo"></div>
+
             <div class="grid-item4"><h1><strong>Daily tappable tech news <br> and stories</strong></h1></div>
-            <div class="grid-item5"><p>Every weekday Sip surfaces the most interesting and important tech <br> stories of the day, from breaking news to profiles on favorite tech <br> products.</p></div>
-            <div class="grid-item6"><img class="download" src="images/download-ios.svg" alt="download-ios"><img class="download" src="images/download-android.svg" alt="download-android"></div>
-            <div class="grid-item7"><p id="text1">Sip News is built b <a href="https://www.producthunt.com">Product Hunt</a> and its awesome community.</p></div>
+
+            <div class="grid-item5">
+                <p>Every weekday Sip surfaces the most interesting and important tech <br> 
+                stories of the day, from breaking news to profiles on favorite tech <br> 
+                products.</p>
+            </div>
+
+            <div class="grid-item6"><img class="download" src="images/download-ios.svg" alt="download-ios">
+                <img class="download" src="images/download-android.svg" alt="download-android">
+            </div>
+
+            <div class="grid-item7"><p id="text1">Sip News is built by<a href="https://www.producthunt.com">Product Hunt</a> and its awesome community.</p></div>
+
             <div class="grid-item8"><img class="iphone" src="images/iphone.png" alt="iphone"></div>
+
           </div>
     </body>
 </html>
