--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <div class="grid-item8"><img class="iphone" src="images/iphone.png" alt="iphone">
 
-                <iframe src="./images/wiitheme.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe> 
+                <audio controls autoplay src="./images/wiitheme.mp3">
                   
             </div>
 
