mii trashquality mp3
╰(*°▽°*)╯

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <div class="grid-item8"><img class="iphone" src="images/iphone.png" alt="iphone">
 
-                <audio controls autoplay src="./images/wiitheme.mp3">
+                <audio controls autoplay src="images/mii_v2trashquality.mp3">
                   
             </div>
 
