--- a/index.html
+++ b/index.html
@@ -35,12 +35,7 @@
 
             <div class="grid-item7"><p id="text1">Sip News is built by <a href="https://www.producthunt.com">Product Hunt</a> and its awesome community.</p></div>
 
-            <div class="grid-item8"><img class="iphone" src="images/iphone.png" alt="iphone"z>
-
-                <iframe src="http://www.staggeringbeauty.com/" style="border: 1px inset #ddd" width="498" height="598"></iframe>
-                  
-            </div>
-
-        </div>
+            <div class="grid-item8"><img class="iphone" src="images/iphone.png" alt="iphone"z></div>
+            <iframe class="grid-item9" src="http://www.staggeringbeauty.com/" style="border: 1px inset #ddd" width="498" height="598"></iframe>    
     </body>
 </html>
