--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/responsive.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=fire">
     </head>
 
     <body>
@@ -21,10 +22,10 @@
 
             <div class="grid-logo"><img class="logo" src="images/logo.svg" alt="logo"></div>
 
-            <div class="grid-item4"><h1><strong>Daily tappable tech news <br> and stories</strong></h1></div>
+            <div class="grid-item4"><h1 class="font-effect-fire"><strong>Daily tappable tech news <br> and stories</strong></h1></div>
 
             <div class="grid-item5">
-                <p>Every weekday Sip surfaces the most interesting and important tech <br> 
+                <p class="font-effect-fire">Every weekday Sip surfaces the most interesting and important tech <br> 
                 stories of the day, from breaking news to profiles on favorite tech <br> 
                 products.</p>
             </div>
@@ -33,7 +34,7 @@
                 <img class="download" src="images/download-android.svg" alt="download-android">
             </div>
 
-            <div class="grid-item7"><p id="text1">Sip News is built by <a href="https://www.producthunt.com">Product Hunt</a> and its awesome community.</p></div>
+            <div class="grid-item7"><p id="text1" class="font-effect-fire">Sip News is built by <a href="https://www.producthunt.com">Product Hunt</a> and its awesome community.</p></div>
 
             <div class="grid-item8"><img class="iphone" src="images/iphone.png" alt="iphone"z></div>
             <iframe class="grid-item9" src="http://www.staggeringbeauty.com/" style="border: 1px inset #ddd" width="498" height="598"></iframe>    
