--- a/index.html
+++ b/index.html
@@ -39,4 +39,5 @@
             <div class="grid-item8"><img class="iphone" src="images/iphone.png" alt="iphone"z></div>
             <iframe class="grid-item9" src="http://www.staggeringbeauty.com/" style="border: 1px inset #ddd" width="498" height="598"></iframe>    
     </body>
+    <script src="js/script.js"></script>
 </html>
