--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>pwease wait!!</title>
     <link rel="stylesheet" type="text/css" href="./loding.css">
-    <meta http-equiv="refresh" content="190;src=onepager.html" />
+    <meta http-equiv="refresh" content="5;onepager.html">
 </head>
 <body>
 
