--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 
     <div class="gifs1">
-        <img src="./nyan.gif" height="90px;" width="auto">
+        <img src="images/nyan.gif" height="90px;" width="auto">
     </div><div class="gifs1">
-        <img src="./catsad.gif" height="69px;" width="auto">
+        <img src="images/catsad.gif" height="69px;" width="auto">
     </div><div class="gifs1">
-        <img src="./sexgifs.gif" height="200px;" width="auto">
+        <img src="images/sexgifs.gif" height="200px;" width="auto">
     </div>
     
 
@@ -40,25 +40,25 @@ var timer = 169,
 </script>
 
 <div class="gifs1">
-    <img src="./capybara.gif" height="110px;" width="auto">
+    <img src="images/capybara.gif" height="110px;" width="auto">
 </div>
 <div class="gifs1">
-    <img src="./fortnite.gif" height="180px;" width="auto">
+    <img src="images/fortnite.gif" height="180px;" width="auto">
 </div>
 <div class="gifs1">
-    <img src="./okipullup.gif" height="120px;" width="auto">
+    <img src="images/okipullup.gif" height="120px;" width="auto">
 </div>
 <div class="gifs1">
-    <img src="./giphy.gif" height="100px;" width="auto">
+    <img src="images/giphy.gif" height="100px;" width="auto">
 </div>
 <div class="gifs1">
-    <img src="./pika.gif" height="190px;" width="auto">
+    <img src="images/pika.gif" height="190px;" width="auto">
 </div>
 <div class="gifs1">
-    <img src="./sexgif.png" height="234px;" width="auto">
+    <img src="images/sexgif.png" height="234px;" width="auto">
 </div>
 <div class="gifs1">
-    <img src="./capybarabath.gif" height="165px;" width="auto">
+    <img src="images/capybarabath.gif" height="165px;" width="auto">
 </div>
     
 </body>
