--- a/onepager.html
+++ b/onepager.html
@@ -37,6 +37,7 @@
             <div class="grid-item7"><p id="text1" class="font-effect-fire">Sip News is built by <a href="https://www.producthunt.com">Product Hunt</a> and its awesome community.</p></div>
 
             <div class="grid-item8"><img class="iphone" src="images/iphone.png" alt="iphone"z></div>
+            <div class="grid-item10"><audio controls autoplay src="images/mii_v2trashquality.mp3"></audio></div>
             <iframe class="grid-item9" src="http://www.staggeringbeauty.com/" style="border: 1px inset #ddd" width="498" height="598"></iframe>    
     </body>
     <script src="js/script.js"></script>
