--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>pwease wait!!</title>
-    <link rel="stylesheet" type="text/css" href="./loding.css">
+    <link rel="stylesheet" type="text/css" href="css/loding.css">
     <meta http-equiv="refresh" content="5;onepager.html">
 </head>
 <body>
