--- a/onepager.html
+++ b/onepager.html
@@ -38,7 +38,12 @@
 
             <div class="grid-item8"><img class="iphone" src="images/iphone.png" alt="iphone"z></div>
             <div class="grid-item10"><audio controls autoplay src="images/mii_v2trashquality.mp3"></audio></div>
-            <iframe class="grid-item9" src="http://www.staggeringbeauty.com/" style="border: 1px inset #ddd" width="498" height="598"></iframe>    
+            <iframe class="grid-item9" src="http://www.staggeringbeauty.com/" style="border: 1px inset #ddd" width="498" height="598"></iframe> 
+            
+            <div class="grid-item69"><video id="background-video" autoplay loop muted poster="./images/rat.mp4">
+                <source src="./images/rat.mp4" type="video/mp4">
+                </video></div>
+            
     </body>
     <script src="js/script.js"></script>
 </html>
