--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
     <title>pwease wait!!</title>
     <link rel="stylesheet" type="text/css" href="css/loding.css">
     <meta http-equiv="refresh" content="5;onepager.html">
-    <style>
-        body {
-            background-image: url(images/bg.png);
-        }
-    </style>
 </head>
 <body>
 
@@ -26,7 +21,23 @@
 
 <b><span id="countdown">90</span></b>
 
+<script type="text/javascript">
 
+var timer = 169,
+    el = document.getElementById('countdown');
+
+(function t_minus() {
+    'use strict';
+    el.innerHTML = timer--;
+    if (timer >= 0) {
+        setTimeout(function () {
+            t_minus();
+        }, 1200);
+    } else {
+    }
+}());
+
+</script>
 
 <div class="gifs1">
     <img src="images/capybara.gif" height="110px;" width="auto">
@@ -51,7 +62,7 @@
 </div>
     
 </body>
-<script src="js/waitlist.js"></script>
+
 
 
 </html>
