--- a/onepager.html
+++ b/onepager.html
@@ -22,11 +22,11 @@
 
             <div class="grid-logo"><img class="logo" src="images/logo.svg" alt="logo"></div>
 
-            <div class="grid-item4"><h1 class="font-effect-fire"><strong>Daily tappable tech news <br> and stories</strong></h1></div>
+            <div class="grid-item4"><h1 class="font-effect-fire"><strong>Daeily tappable teck news <br> and stories</strong></h1></div>
 
             <div class="grid-item5">
-                <p class="font-effect-fire">Every weekday Sip surfaces the most interesting and important tech <br> 
-                stories of the day, from breaking news to profiles on favorite tech <br> 
+                <p class="font-effect-fire">Evary weekdey Sip surfaces the most interesting and important tech <br> 
+                stories of the day, from breaking nuws to profiles on favorite tech <br> 
                 products.</p>
             </div>
 
