--- a/index.html
+++ b/index.html
@@ -13,23 +13,6 @@
       </script>
 </head>
 <body>
-
-    <div id="div1" class="gifs1">
-        <img src="images/nyan.gif" height="90px;" width="auto">
-        <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div1')">
-    </div>
-    <div id="div2" class="gifs1">
-        <img src="images/catsad.gif" height="69px;" width="auto">
-        <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div2')">
-    </div>
-    <div id="div3" class="gifs1">
-        <img src="images/sexgifs.gif" height="200px;" width="auto">
-        <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div3')">
-    </div>
-    
-
-<br>
-
 <b><span id="countdown">9999</span></b>
 
 <script type="text/javascript">
@@ -47,13 +30,20 @@ var timer = 169,
     } else {
     }
 }());
-
-
-
-
-
 </script>
 
+<div id="div1" class="gifs1">
+    <img src="images/nyan.gif" height="90px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div1')">
+</div>
+<div id="div2" class="gifs1">
+    <img src="images/catsad.gif" height="69px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div2')">
+</div>
+<div id="div3" class="gifs1">
+    <img src="images/sexgifs.gif" height="200px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div3')">
+</div>
 <div id="div4" class="gifs1">
     <img src="images/capybara.gif" height="110px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div4')">
@@ -79,8 +69,84 @@ var timer = 169,
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div9')">
 </div>
 <div id="div10" class="gifs1">
-    <img src="images/capybarabath.gif" height="165px;" width="auto">
+    <img src="images/eend.gif" height="165px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div10')">
+</div>
+<div id="div11" class="gifs1">
+    <img src="images/laura.gif" height="110px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div11')">
+</div>
+<div id="div12" class="gifs1">
+    <img src="images/minions.gif" height="180px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div12')">
+</div>
+<div id="div13" class="gifs1">
+    <img src="images/pikachu.gif" height="120px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div13')">
+</div>
+<div id="div14" class="gifs1">
+    <img src="images/spinning-amongus.gif" height="100px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div14')">
+</div>
+<div id="div15" class="gifs1">
+    <img src="images/dance-eend.gif" height="190px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div15')">
+</div>
+<div id="div16" class="gifs1">
+    <img src="images/rainbow.gif" height="234px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div16')">
+</div>
+<div id="div17" class="gifs1">
+    <img src="images/khaby-really.gif" height="165px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div17')">
+</div>
+<div id="div18" class="gifs1">
+    <img src="" height="90px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div18')">
+</div>
+<div id="div19" class="gifs1">
+    <img src="" height="90px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div19')">
+</div>
+<div id="div20" class="gifs1">
+    <img src="" height="90px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div20')">
+</div>
+<div id="div21" class="gifs1">
+    <img src="" height="90px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div21')">
+</div>
+<div id="div22" class="gifs1">
+    <img src="" height="90px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div22')">
+</div>
+<div id="div23" class="gifs1">
+    <img src="" height="90px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div23')">
+</div>
+<div id="div24" class="gifs1">
+    <img src="" height="90px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div24')">
+</div>
+<div id="div25" class="gifs1">
+    <img src="" height="90px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div25')">
+</div>
+<div id="div26" class="gifs1">
+    <img src="" height="90px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div26')">
+</div>
+<div id="div27" class="gifs1">
+    <img src="" height="90px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div28')">
+</div>
+<div id="div29" class="gifs1">
+    <img src="" height="90px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div29')">
+</div>
+<div id="div30" class="gifs1">
+    <img src="" height="90px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div30')">
 </div>
 </body>
 
