--- a/index.html
+++ b/index.html
@@ -101,52 +101,64 @@ var timer = 169,
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div17')">
 </div>
 <div id="div18" class="gifs1">
-    <img src="" height="90px;" width="auto">
+    <img src="images/200w.gif" height="90px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div18')">
 </div>
 <div id="div19" class="gifs1">
-    <img src="" height="90px;" width="auto">
+    <img src="images/amongus.gif" height="90px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div19')">
 </div>
 <div id="div20" class="gifs1">
-    <img src="" height="90px;" width="auto">
+    <img src="images/areyoualive.gif" height="90px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div20')">
 </div>
 <div id="div21" class="gifs1">
-    <img src="" height="90px;" width="auto">
+    <img src="images/dog.gif" height="90px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div21')">
 </div>
 <div id="div22" class="gifs1">
-    <img src="" height="90px;" width="auto">
+    <img src="images/fish.gif" height="90px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div22')">
 </div>
 <div id="div23" class="gifs1">
-    <img src="" height="90px;" width="auto">
+    <img src="images/line.gif" height="90px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div23')">
 </div>
 <div id="div24" class="gifs1">
-    <img src="" height="90px;" width="auto">
+    <img src="images/mouse.gif" height="90px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div24')">
 </div>
 <div id="div25" class="gifs1">
-    <img src="" height="90px;" width="auto">
+    <img src="images/popping-head-pop-up.gif" height="90px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div25')">
 </div>
 <div id="div26" class="gifs1">
-    <img src="" height="90px;" width="auto">
+    <img src="images/rainbow2.gif" height="90px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div26')">
 </div>
 <div id="div27" class="gifs1">
-    <img src="" height="90px;" width="auto">
+    <img src="images/Rotating_Tux.gif" height="90px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div28')">
 </div>
 <div id="div29" class="gifs1">
-    <img src="" height="90px;" width="auto">
+    <img src="images/spongebob.jpg" height="90px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div29')">
 </div>
 <div id="div30" class="gifs1">
-    <img src="" height="90px;" width="auto">
+    <img src="images/spongebob2.gif" height="90px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div30')">
+</div>
+<div id="div31" class="gifs1">
+    <img src="images/t.gif" height="90px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div31')">
+</div>
+<div id="div32" class="gifs1">
+    <img src="images/tent.gif" height="90px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div32')">
+</div>
+<div id="div33" class="gifs1">
+    <img src="images/VFoldMedian.gif" height="90px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div33')">
 </div>
 </body>
 
