--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="css/loding.css">
     <meta http-equiv="refresh" content="150;onepager.html">
     <script>
+
+        
         function removeDiv(divId) {
           var div = document.getElementById(divId);
           div.parentNode.removeChild(div);
@@ -30,6 +32,9 @@ var timer = 169,
     } else {
     }
 }());
+
+
+
 </script>
 
 <div id="div1" class="gifs1">
@@ -137,7 +142,7 @@ var timer = 169,
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div26')">
 </div>
 <div id="div27" class="gifs1">
-    <img src="images/Rotating_Tux.gif" height="90px;" width="auto">
+    <img src="images/i-see-you.gif" height="90px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div28')">
 </div>
 <div id="div29" class="gifs1">
@@ -159,6 +164,14 @@ var timer = 169,
 <div id="div33" class="gifs1">
     <img src="images/VFoldMedian.gif" height="90px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div33')">
+</div>
+<div id="div34" class="gifs1">
+    <img src="images/trollface.png" height="90px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div34')">
+</div>
+<div id="div35" class="gifs1">
+    <img src="images/jeff.webp" height="90px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div35')">
 </div>
 </body>
 
