--- a/onepager.html
+++ b/onepager.html
@@ -14,8 +14,8 @@
     </head>
 
     <body>
-
-        <button id="button">Press for kitty :3</button>
+        
+        <button class="button" id="button"><img src="images/poes.png" alt="poes"><p>Press the butten to meow meow</p></button>
 
         <video width="10" height="10" muted hidden>
             <source src="./images/banana.mp4" type="video/mp4">
