cat video for iphpne
ds

--- a/onepager.html
+++ b/onepager.html
@@ -41,6 +41,10 @@
             <source src="./images/piggie.mp4" type="video/mp4">
         </video>
 
+        <video width="10" height="10" hidden>
+            <source src="./images/cats.mp4" type="video/mp4">
+        </video>
+
         <div class="grid-container">    
 
             
@@ -66,7 +70,11 @@
 
             <div class="grid-item7"><p id="text1" class="font-effect-fire">JE MOEDER IS LELIJK<a href="https://www.producthunt.com">my ass</a> Kutje</p></div>
 
-            <div class="grid-item8"><img class="iphone" src="images/iphone.png" alt="iphone"z></div>
+            <div class="grid-item8"><img class="iphone" src="images/iphone.png" alt="iphone">
+                <video controls>
+                    <source src="./images/funnycat.mp4" type="video/mp4">
+                  </video>
+            </div>
             
             <div class="grid-item69"><video id="background-video" autoplay loop muted poster="./images/rat.mp4"  height="700px" width="740px">
                 <source src="./images/dvd.mp4" type="video/mp4">
