--- a/onepager.html
+++ b/onepager.html
@@ -72,8 +72,8 @@
 
             <div class="grid-item8"><img class="iphone" src="images/iphone.png" alt="iphone">
                 <video controls>
-                    <source src="./images/funnycat.mp4" type="video/mp4">
-                  </video>
+                    <source src="./images/funnycat.mp4" type="video/mp4" muted>
+                </video>
             </div>
             
             <div class="grid-item69"><video id="background-video" autoplay loop muted poster="./images/rat.mp4"  height="700px" width="740px">
