--- a/onepager.html
+++ b/onepager.html
@@ -70,8 +70,9 @@
 
             <div class="grid-item7"><p id="text1" class="font-effect-fire">JE MOEDER IS LELIJK<a href="https://www.producthunt.com">my ass</a> Kutje</p></div>
 
-            <div class="grid-item8"><img class="iphone" src="images/iphone.png" alt="iphone">
-                <video controls>
+            <div class="grid-item8"><img class="iphone" src="images/iphone.png" alt="iphone"></div>
+            <div class="grid-item11">
+                <video class="phonemp4" controls>
                     <source src="./images/funnycat.mp4" type="video/mp4" muted>
                 </video>
             </div>
