different sizes for loding images gif1
kinker kenker konker, mijn piemel is donker

--- a/index.html
+++ b/index.html
@@ -5,14 +5,7 @@
     <title>pwease wait!!</title>
     <link rel="stylesheet" type="text/css" href="css/loding.css">
     <meta http-equiv="refresh" content="150;onepager.html">
-    <script>
-
-        
-        function removeDiv(divId) {
-          var div = document.getElementById(divId);
-          div.parentNode.removeChild(div);
-        }
-      </script>
+    <script src="js/index.js"></script>
 </head>
 <body>
 <b><span id="countdown">9999</span></b>
@@ -174,7 +167,5 @@ var timer = 169,
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div35')">
 </div>
 </body>
-
-
 
 </html>
