--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/loding.css">
     <meta http-equiv="refresh" content="150;onepager.html">
     <script src="js/index.js"></script>
+    <link rel="icon" type="image/x-icon" href="./images/trollface.png">
 </head>
 <body>
 <b><span id="countdown">9999</span></b>
