--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <b><span id="countdown">9999</span></b>
 
 <script type="text/javascript">
-
+// timer to website zichtbaar word
 var timer = 169,
     el = document.getElementById('countdown');
 
@@ -166,6 +166,7 @@ var timer = 169,
     <img src="images/jeff.webp" height="90px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div35')">
 </div>
+<img class="NUKE" id="bottemright" src="images/nuke2.png" alt="nuke" onclick="removeDivs()">
 </body>
 
 </html>
