--- a/onepager.html
+++ b/onepager.html
@@ -14,8 +14,12 @@
     </head>
 
     <body>
-        
-        <button class="button" id="button"><img src="images/poes.png" alt="poes"><p>Press the butten to meow meow</p></button>
+        <!-- mew mew butten -->
+        <button href="print.html"  
+        onclick="window.open('print.html', 
+                             'newwindow', 
+                             'width=500,height=700'); 
+                  return false;" class="button" id="button"><img src="images/poes.png" alt="poes"><p>Press the butten to meow meow</p></button>
 
         <video width="10" height="10" hidden>
             <source src="./images/banana.mp4" type="video/mp4">
@@ -77,7 +81,7 @@
                 </video>
             </div>
             <img id="rat" src="./images/capyspin.gif">
-               
+            <input type="button" value="random link!" onClick="random_3()"></input>
     </body>
     <script src="js/script.js"></script>
 </html>
