--- a/onepager.html
+++ b/onepager.html
@@ -68,7 +68,8 @@
                 <p class="font-effect-fire"></p>
             </div>
 
-            <div class="grid-item6"><img class="download" src="images/download-ios.svg" alt="download-ios">
+            <div class="grid-item6">
+                <img class="download" src="images/download-ios.svg" alt="download-ios">
                 <img class="download" src="images/download-android.svg" alt="download-android">
             </div>
 
@@ -81,7 +82,7 @@
                 </video>
             </div>
             <img id="rat" src="./images/capyspin.gif">
-            
+
     </body>
     <script src="js/script.js"></script>
 </html>
