--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@ var timer = 169,
     <img src="images/fortnite.gif" height="180px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div5')">
 </div>
+<div id="div5" class="gifs1">
+    <img src="images/Kharua.png" height="180px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div5')">
+</div>
 <div id="div6" class="gifs1">
     <img src="images/okipullup.gif" height="120px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div6')">
@@ -99,6 +103,12 @@ var timer = 169,
     <img src="images/khaby-really.gif" height="165px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div17')">
 </div>
+
+<div id="div17" class="gifs1">
+    <img src="images/khaby-really.gif" height="165px;" width="auto">
+    <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div17')">
+</div>
+
 <div id="div18" class="gifs1">
     <img src="images/200w.gif" height="90px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div18')">
