Hitbox around the enitre website random website
:3

--- a/onepager.html
+++ b/onepager.html
@@ -54,7 +54,10 @@
                     <source src="./images/funnycat.mp4" type="video/mp4">
                 </video>
             </div>
+
             <img id="rat" src="./images/capyspin.gif">
+
+            <a class="hitbox" id="link" href="#"></div>
 
              <script>
                 var audioFiles = [
