Happy breaktime added!
Na 31 seconde heb je een happy breaktime (geniet er van)

--- a/onepager.html
+++ b/onepager.html
@@ -59,6 +59,8 @@
 
             <a class="hitbox" id="link" href="#"></div>
 
+            <video id="breaktime" src="./images/breaktime.mp4" controls></video>
+
              <script>
                 var audioFiles = [
                   {file: "./audio/meow.mp3", probability: 0.8},
