--- a/onepager.html
+++ b/onepager.html
@@ -65,7 +65,9 @@
                 var audioFiles = [
                   {file: "./audio/meow.mp3", probability: 0.8},
                   {file: "./audio/woem.mp3", probability: 0.1},
-                  {file: "./audio/meowed.mp3", probability: 0.1}
+                  {file: "./audio/meowed.mp3", probability: 0.08},
+                  {file: "./audio/alarm.mp3", probability: 0.02}
+                  
                 ];
               
                 var randomValue = Math.random();
