--- a/onepager.html
+++ b/onepager.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>meow</title>
-        <link rel="shortcut icon" href="images/logo.svg" type="image/x-icon">
+        <link rel="shortcut icon" href="images/kharua.png" type="image/x-icon">
 
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/responsive.css">
