--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ function play() {
 }
 
 </script>
-<audio id="audio" src="https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3"></audio>
+<audio id="audio" src="images/pipe.mp3"></audio>
 <div id="div1" class="gifs1">
     <img src="images/nyan.gif" height="90px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div1')">
@@ -43,7 +43,7 @@ function play() {
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div2')">
 </div>
 <div id="div3" class="gifs1">
-    <img type="button" value="PLAY" onclick="play()" src="images/sexgifs.gif" height="200px;" width="auto">
+    <img type="button" value="PLAY" onclick="play()" src="images/pipe.png" height="200px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div3')">
 </div>
 <div id="div4" class="gifs1">
