--- a/index.html
+++ b/index.html
@@ -27,13 +27,20 @@ var timer = 169,
     }
 }());
 
+// play sound on click
+function playAudio(url) {
+  new Audio(url).play();
+}
+
 function play() {
-        var audio = document.getElementById("audio");
+        var audio = document.getElementById("audio2");
         audio.play();
 }
 
 </script>
-<audio id="audio" src="images/pipe.mp3"></audio>
+<audio id="audio1" src="sylveonkreun.mp3"></audio>
+<audio id="audio2" src="images/pipe.mp3"></audio>
+
 <div id="div1" class="gifs1">
     <img src="images/nyan.gif" height="90px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div1')">
@@ -55,7 +62,7 @@ function play() {
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div5')">
 </div>
 <div id="div5" class="gifs1">
-    <img src="images/Kharua.png" height="180px;" width="auto">
+    <img onclick="playAudio('images/sylveonkreun.mp3')" src="images/Kharua.png" height="180px;" width="auto">
     <img id="close" src="images/close-icon.png" alt="close" onclick="removeDiv('div5')">
 </div>
 <div id="div6" class="gifs1">
